--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,13 +1,18 @@
-@import "global/normalize";
-@import "global/fonts.scss";
-@import "global/colors.scss";
-@import "global/content.scss";
-@import "global/viewport.scss";
-@import "global/mixins.scss";
+@import 'global/normalize';
+@import 'global/fonts.scss';
+@import 'global/colors.scss';
+@import 'global/content.scss';
+@import 'global/viewport.scss';
+@import 'global/mixins.scss';
 
-@import "blocks/page.scss";
-@import "blocks/page-body.scss";
-@import "blocks/wrapper.scss";
-@import "blocks/page-header.scss";
-@import "blocks/button.scss";
-@import "blocks/main-nav.scss";
+@import 'blocks/page.scss';
+@import 'blocks/page-body.scss';
+@import 'blocks/wrapper.scss';
+@import 'blocks/page-header.scss';
+@import 'blocks/button.scss';
+@import 'blocks/main-nav.scss';
+@import 'blocks/page-footer.scss';
+@import 'blocks/footer-nav.scss';
+@import 'blocks/footer-logo.scss';
+@import 'blocks/footer-menu.scss';
+@import 'blocks/footer-social.scss';
