добавил блок путшествий

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,3 +16,4 @@
 @import 'blocks/footer-logo.scss';
 @import 'blocks/footer-menu.scss';
 @import 'blocks/footer-social.scss';
+@import 'blocks/trips.scss';
