добавил блок avantage

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,3 +17,4 @@
 @import 'blocks/footer-menu.scss';
 @import 'blocks/footer-social.scss';
 @import 'blocks/trips.scss';
+@import 'blocks/avantage.scss';
