--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,9 +1,9 @@
 .page-header {
   background-image: image-set(
-    url("../img/header/header-background.jpg") 1x,
-    url("../img/header/header-background@2x.jpg") 2x,
-    url("../img/header/header-background.webp") 1x,
-    url("../img/header/header-background@2x.webp") 2x
+    url('../img/header/header-background.jpg') 1x,
+    url('../img/header/header-background@2x.jpg') 2x,
+    url('../img/header/header-background.webp') 1x,
+    url('../img/header/header-background@2x.webp') 2x
   );
   background-position: 50% 50%;
   background-repeat: no-repeat;
@@ -12,20 +12,20 @@
 
   @media (max-width: $tablet-width) {
     background-image: image-set(
-      url("../img/header/header-background-tablet.jpg") 1x,
-      url("../img/header/header-background-tablet@2x.jpg") 2x,
-      url("../img/header/header-background-tablet.webp") 1x,
-      url("../img/header/header-background-tablet@2x.webp") 2x
+      url('../img/header/header-background-tablet.jpg') 1x,
+      url('../img/header/header-background-tablet@2x.jpg') 2x,
+      url('../img/header/header-background-tablet.webp') 1x,
+      url('../img/header/header-background-tablet@2x.webp') 2x
     );
     padding: 30px 0 280px 0;
   }
 
   @media (max-width: $mobile-width) {
     background-image: image-set(
-      url("../img/header/header-background-mobile.jpg") 1x,
-      url("../img/header/header-background-mobile@2x.jpg") 2x,
-      url("../img/header/header-background-mobile.webp") 1x,
-      url("../img/header/header-background-mobile@2x.webp") 2x
+      url('../img/header/header-background-mobile.jpg') 1x,
+      url('../img/header/header-background-mobile@2x.jpg') 2x,
+      url('../img/header/header-background-mobile.webp') 1x,
+      url('../img/header/header-background-mobile@2x.webp') 2x
     );
     background-position: 50% 0;
     padding: 20px 0 185px 0;
