добавил каталог туров

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -18,3 +18,4 @@
 @import 'blocks/footer-social.scss';
 @import 'blocks/trips.scss';
 @import 'blocks/avantage.scss';
+@import 'blocks/upcoming-cruises.scss';
