--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,3 +19,4 @@
 @import 'blocks/trips.scss';
 @import 'blocks/avantage.scss';
 @import 'blocks/upcoming-cruises.scss';
+@import 'blocks/reservation.scss';
