добавил блок контактов

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -20,3 +20,4 @@
 @import 'blocks/avantage.scss';
 @import 'blocks/upcoming-cruises.scss';
 @import 'blocks/reservation.scss';
+@import 'blocks/contacts.scss';
