--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -3,9 +3,13 @@
   align-items: center;
   justify-content: space-between;
 
+  @media (max-width: 1159px) {
+    row-gap: 30px;
+  }
+
   @media (max-width: 767px) {
     flex-direction: column;
-    row-gap: 30px;
+    row-gap: 19px;
     align-items: flex-start;
   }
 }
