--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,18 +1,18 @@
 .contacts {
-  padding: 120px 0;
+  padding: 117px 0;
 
   @media (max-width: 1159px) {
     padding: 100px 0;
   }
 
   @media (max-width: 767px) {
-    padding: 65px 0;
+    padding: 58px 0;
   }
 }
 
 .contacts .wrapper {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   column-gap: 100px;
 
   @media (max-width: 1159px) {
@@ -30,7 +30,7 @@
   order: 1;
 
   @media (max-width: 1159px) {
-    width: 100%;
+    width: 500px;
     order: 2;
   }
 
@@ -72,11 +72,15 @@
   font-family: $font-medium;
   font-size: 18px;
   line-height: 150%;
-  margin: 0 0 45px 0;
+  margin: 79px 0 31px 0;
   max-width: 500px;
 
   @media (max-width: 1159px) {
-    margin: 0 0 40px 0;
+    margin: 74px 0 26px 0;
+  }
+
+  @media (max-width: 767px) {
+    margin: 0 0 27px 0;
   }
 }
 
@@ -85,7 +89,7 @@
   font-size: 16px;
   line-height: 150%;
   font-style: normal;
-  margin: 0 0 33px 0;
+  margin: 0 0 23px 0;
   padding-left: 28px;
 
   &::before {
@@ -96,6 +100,10 @@
     width: 18px;
     height: 22px;
     background: url('../img/contacts/contacts-item-1.svg') 50% 50% no-repeat;
+  }
+
+  @media (max-width: 1159px) {
+    margin: 0 0 22px 0;
   }
 }
 
