--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,6 +1,10 @@
 .page-footer {
   background-color: $basic-black;
-  padding: 50px 0;
+  padding: 52px 0;
+
+  @media (max-width: 1159px) {
+    padding: 48px 0;
+  }
 
   @media (max-width: 767px) {
     padding: 40px 0;
