--- a/source/sass/blocks/upcoming-cruises.scss
+++ b/source/sass/blocks/upcoming-cruises.scss
@@ -1,13 +1,31 @@
 .upcoming-cruises {
-  padding: 120px 0;
+  padding: 115px 0;
+
+  @media (max-width: 1159px) {
+    padding: 97px 0;
+  }
+
+  @media (max-width: 767px) {
+    padding: 61px 0;
+  }
 }
 
 .upcoming-cruises h2 {
+  margin: 0 0 53px 0;
   text-align: center;
   font-family: $font-semi-bold;
-  margin-bottom: 60px;
   font-size: 28px;
   line-height: 150%;
+
+  @media (max-width: 1159px) {
+    font-size: 26px;
+    margin: 0 0 49px 0;
+  }
+
+  @media (max-width: 767px) {
+    font-size: 24px;
+    margin: 0 0 30px 0;
+  }
 }
 
 .upcoming-cruises__list {
@@ -36,6 +54,11 @@
     width: 309px;
     height: 386px;
   }
+
+  @media (max-width: 767px) {
+    width: 270px;
+    height: 386px;
+  }
 }
 
 .upcoming-cruises__image-container {
@@ -51,6 +74,11 @@
     width: 309px;
     height: 386px;
   }
+
+  @media (max-width: 767px) {
+    width: 270px;
+    height: 386px;
+  }
 }
 
 .upcoming-cruises__item h3 {
@@ -63,6 +91,11 @@
   font-size: 18px;
   line-height: 150%;
   color: $basic-white;
+
+  @media (max-width: 767px) {
+    left: 26px;
+    bottom: 19px;
+  }
 }
 
 .upcoming-cruises__content-container {
