--- a/source/sass/blocks/reservation.scss
+++ b/source/sass/blocks/reservation.scss
@@ -99,7 +99,7 @@
   }
 }
 
-.reservation__form {
+form {
   padding: 45px 50px 50px 50px;
   box-sizing: border-box;
   background-color: $basic-black;
@@ -116,7 +116,7 @@
   }
 }
 
-.reservation__form p {
+form p {
   margin: 0 0 26px 0;
   max-width: 303px;
   color: $basic-white;
@@ -133,7 +133,7 @@
   }
 }
 
-.reservation__form input {
+form input {
   padding: 9.5px 16px;
   border: none;
 
@@ -159,7 +159,23 @@
   }
 }
 
-.reservation__form label {
+form label[for='name'],
+label[for='tel'],
+label[for='email'],
+input[type='checkbox'] {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+
+form label[for='checkbox'] {
   position: relative;
   padding: 5px 0 5px 23px;
   white-space: nowrap;
@@ -188,7 +204,7 @@
   }
 }
 
-.checkbox-input:checked + .checkbox-label {
+form input[type='checkbox']:checked + label[for='checkbox'] {
   &::after {
     content: '';
     position: absolute;
