--- a/source/sass/blocks/footer-logo.scss
+++ b/source/sass/blocks/footer-logo.scss
@@ -2,7 +2,7 @@
   width: 70px;
   height: 38px;
 
-  @media (max-width: 1159px) and (min-width: $tablet-width) {
+  @media (max-width: 1159px) {
     width: 38px;
     height: 20px;
   }
