--- a/source/sass/blocks/footer-nav.scss
+++ b/source/sass/blocks/footer-nav.scss
@@ -2,14 +2,16 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 30px;
 
   @media (max-width: 1159px) {
-    row-gap: 30px;
+    justify-content: flex-start;
+    gap: 25px;
   }
 
   @media (max-width: 767px) {
     flex-direction: column;
-    row-gap: 19px;
+    gap: 23px;
     align-items: flex-start;
   }
 }
