--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -2,11 +2,11 @@
   padding: 117px 0;
 
   @media (max-width: 1159px) {
-    padding: 100px 0;
+    padding: 97px 0;
   }
 
   @media (max-width: 767px) {
-    padding: 58px 0;
+    padding: 51px 0;
   }
 }
 
@@ -30,7 +30,11 @@
   order: 1;
 
   @media (max-width: 1159px) {
-    width: 500px;
+    width: 100%;
+  }
+
+  @media (max-width: $tablet-width) {
+    width: 324px;
     order: 2;
   }
 
@@ -47,7 +51,6 @@
   @media (max-width: 1159px) {
     width: 100%;
     height: 335px;
-    border: 1px solid black;
     overflow: hidden;
   }
 
@@ -63,8 +66,18 @@
   flex-direction: column;
   align-items: flex-start;
 
+  @media (max-width: 1159px) {
+    width: 100%;
+  }
+
+  @media (max-width: $tablet-width) {
+    width: 324px;
+    order: 2;
+  }
+
   @media (max-width: 767px) {
     order: 1;
+    width: 100%;
   }
 }
 
@@ -76,7 +89,7 @@
   max-width: 500px;
 
   @media (max-width: 1159px) {
-    margin: 74px 0 26px 0;
+    margin: 69px 0 26px 0;
   }
 
   @media (max-width: 767px) {
@@ -95,7 +108,7 @@
   &::before {
     content: '';
     position: absolute;
-    top: 0;
+    top: 5px;
     left: 0;
     width: 18px;
     height: 22px;
@@ -122,5 +135,9 @@
     width: 18px;
     height: 18px;
     background: url('../img/contacts/contacts-item-2.svg') 50% 50% no-repeat;
+  }
+
+  &:not(:last-child) {
+    margin-bottom: 20px;
   }
 }
