--- a/source/sass/blocks/footer-menu.scss
+++ b/source/sass/blocks/footer-menu.scss
@@ -15,8 +15,8 @@
   flex-wrap: wrap;
   gap: 33px;
 
-  @media (max-width: 1159px) and (min-width: $tablet-width) {
-    gap: 23px;
+  @media (max-width: 1159px) {
+    gap: 25px;
   }
 
   @media (max-width: 767px) {
