--- a/source/sass/blocks/footer-social.scss
+++ b/source/sass/blocks/footer-social.scss
@@ -2,7 +2,7 @@
   justify-self: flex-end;
 }
 
-.footer-social ul {
+.footer-social__list {
   @include list-zeroing;
   display: flex;
   align-items: center;
@@ -14,32 +14,32 @@
   }
 }
 
-.footer-social svg {
-  &:nth-child(1) {
-    width: 11px;
-    height: 20px;
-  }
-  &:nth-child(2) {
-    width: 20px;
-    height: 20px;
-  }
-  &:nth-child(3) {
-    width: 20px;
-    height: 16px;
-  }
+.footer-social__item:nth-child(1) svg {
+  width: 11px;
+  height: 20px;
 
   @media (max-width: 1159px) {
-    &:nth-child(1) {
-      width: 9px;
-      height: 16px;
-    }
-    &:nth-child(2) {
-      width: 16px;
-      height: 16px;
-    }
-    &:nth-child(3) {
-      width: 16px;
-      height: 13px;
-    }
+    width: 9px;
+    height: 16px;
+  }
+}
+
+.footer-social__item:nth-child(2) svg {
+  width: 20px;
+  height: 20px;
+
+  @media (max-width: 1159px) {
+    width: 16px;
+    height: 16px;
+  }
+}
+
+.footer-social__item:nth-child(3) svg {
+  width: 20px;
+  height: 16px;
+
+  @media (max-width: 1159px) {
+    width: 16px;
+    height: 13px;
   }
 }
