--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -4,11 +4,12 @@
   align-items: center;
   justify-content: space-between;
   margin-bottom: 192px;
+  gap: 33px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: 1159px) {
     margin-bottom: 216px;
   }
-  @media (max-width: $mobile-width) {
+  @media (max-width: 767px) {
     margin-bottom: 130px;
     flex-wrap: wrap;
   }
@@ -18,12 +19,12 @@
   width: 70px;
   height: 38px;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: 1159px) {
     width: 38px;
     height: 20px;
   }
 
-  @media (max-width: $mobile-width) {
+  @media (max-width: 767px) {
     width: 42px;
     height: 22px;
   }
@@ -32,10 +33,10 @@
 .main-nav__toggle {
   display: none;
   cursor: pointer;
-  background: $basic-white;
+  background: inherit;
   border: none;
   width: 24px;
-  height: 1px;
+  height: 24px;
   position: relative;
 
   @media (max-width: 767px) {
@@ -50,8 +51,7 @@
 .main-nav__toggle span {
   position: absolute;
   z-index: 20;
-  top: 50%;
-  transform: translateY(-50%);
+  top: 35%;
   width: 24px;
   height: 2px;
   border: none;
@@ -69,12 +69,12 @@
 
   &::before {
     content: '';
-    bottom: 8px;
+    bottom: 6px;
     left: 0;
   }
   &::after {
     content: '';
-    bottom: -8px;
+    bottom: -6px;
     left: 0;
   }
 }
@@ -82,13 +82,15 @@
 .main-nav__toggle--show span {
   background-color: $basic-black;
   transform: rotate(45deg);
-  top: 0;
+  left: 7px;
+  top: 9px;
+  width: 20px;
 
   &::before {
     content: '';
     position: absolute;
     top: 0;
-    width: 24px;
+    width: 20px;
     height: 2px;
     background-color: $basic-black;
     transform: rotate(90deg);
@@ -111,13 +113,14 @@
 .main-nav__menu {
   display: block;
   @media (max-width: 767px) {
-    padding: 25px;
+    padding: 20px 15px;
     display: none;
     min-height: 568px;
-    width: 285px;
+    height: 100vh;
+    width: 98%;
     box-sizing: border-box;
     position: absolute;
-    top: -20px;
+    top: -27px;
     right: -15px;
     background-color: $basic-white;
   }
@@ -126,12 +129,6 @@
 .main-nav__menu--show-menu {
   display: block;
   animation: fadeIn 1s;
-}
-
-.main-nav--no-js .main-nav__menu {
-  @media (max-width: $tablet-width) {
-    position: static;
-  }
 }
 
 .main-nav__menu svg {
@@ -151,17 +148,19 @@
 .main-nav ul {
   @include list-zeroing;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
-  column-gap: 33px;
+  gap: 33px;
 
-  @media (max-width: $tablet-width) {
-    column-gap: 23px;
+  @media (max-width: 1159px) {
+    gap: 23px;
   }
 
   @media (max-width: 767px) {
     flex-direction: column;
     align-items: flex-start;
     row-gap: 28px;
+    padding: 0 10px;
   }
 }
 
@@ -180,5 +179,31 @@
     color: $basic-black;
     font-size: 18px;
     line-height: 22px;
+  }
+}
+
+.main-nav--no-js {
+  margin-bottom: 216px;
+  @media (max-width: 1159px) {
+    margin-bottom: 216px;
+  }
+
+  @media (max-width: 767px) {
+    margin-bottom: 30px;
+  }
+}
+
+.main-nav--no-js a {
+  color: $basic-white;
+}
+
+.main-nav--no-js .main-nav__menu {
+  @media (max-width: $tablet-width) {
+    position: static;
+    display: block;
+    height: 100%;
+    min-height: min-content;
+    background-color: inherit;
+    padding: 0;
   }
 }
