--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -1,4 +1,5 @@
 .page-header {
+  background-color: $basic-black;
   background-image: image-set(
     url('../img/header/header-background.jpg') 1x,
     url('../img/header/header-background@2x.jpg') 2x,
@@ -28,7 +29,7 @@
       url('../img/header/header-background-mobile@2x.webp') 2x
     );
     background-position: 50% 0;
-    padding: 20px 0 176px 0;
+    padding: 20px 0 177px 0;
   }
 }
 
@@ -47,14 +48,15 @@
   line-height: 66px;
   color: $basic-white;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: 1159px) {
     font-size: 50px;
     line-height: 61px;
   }
 
-  @media (max-width: $mobile-width) {
+  @media (max-width: 767px) {
     font-size: 36px;
     line-height: 125%;
+    margin: 0 0 11px 0;
   }
 }
 
@@ -64,13 +66,17 @@
   line-height: 24px;
   color: $basic-white;
 
-  @media (max-width: $tablet-width) {
+  @media (max-width: 1159px) {
     font-size: 18px;
     line-height: 22px;
   }
 
-  @media (max-width: $mobile-width) {
+  @media (max-width: 767px) {
     font-size: 16px;
     line-height: 140%;
+  }
+
+  @media (max-width: $mobile-width) {
+    width: 200px;
   }
 }
