--- a/source/sass/blocks/avantage.scss
+++ b/source/sass/blocks/avantage.scss
@@ -56,14 +56,17 @@
   align-items: flex-start;
   flex-wrap: wrap;
   gap: 40px;
+  margin-bottom: 0;
 
   @media (max-width: 1159px) {
     gap: 30px;
     justify-content: center;
+    margin-bottom: 0;
   }
 
   @media (max-width: 767px) {
-    gap: 25px;
+    gap: 21px;
+    margin-bottom: -5px;
   }
 }
 
@@ -71,18 +74,17 @@
   background-color: $basic-white;
   padding: 30px;
   width: 300px;
-  height: 180px;
-  overflow-y: scroll;
+  min-height: 180px;
 
   @media (max-width: 1159px) {
     padding: 27px 16px 25px 20px;
     width: 170px;
-    height: 260px;
+    min-height: 260px;
   }
 
   @media (max-width: 767px) {
     width: 100%;
-    height: 200px;
+    min-height: 200px;
   }
 }
 
