--- a/source/sass/blocks/upcoming-cruises.scss
+++ b/source/sass/blocks/upcoming-cruises.scss
@@ -92,8 +92,17 @@
 }
 
 .upcoming-cruises__item--isShow h3 {
-  top: 35px;
-  left: 25px;
+  top: 25px;
+  left: 27px;
+  @media (max-width: 1159px) {
+    top: 29px;
+    left: 35px;
+  }
+
+  @media (max-width: 767px) {
+    top: 29px;
+    left: 27px;
+  }
 }
 
 .upcoming-cruises__content-container {
@@ -101,11 +110,19 @@
   background-color: $basic-black;
   height: 100%;
   width: 100%;
-  padding: 73px 25px 35px 25px;
+  padding: 66px 26px 35px 26px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   overflow-y: scroll;
+
+  @media (max-width: 1159px) {
+    padding: 70px 35px 35px 35px;
+  }
+
+  @media (max-width: 767px) {
+    padding: 70px 25px 35px 25px;
+  }
 }
 
 .upcoming-cruises__content-container-list {
@@ -117,7 +134,7 @@
 
 .upcoming-cruises__content-container-item {
   &:not(:last-child) {
-    margin-bottom: 10px;
+    margin-bottom: 13px;
   }
 }
 
@@ -137,13 +154,14 @@
 }
 
 .upcoming-cruises__content-container a {
+  user-select: none;
   cursor: pointer;
   font-family: $font-semi-bold;
   font-size: 14px;
   line-height: 150%;
   color: $basic-black;
   background-color: $basic-white;
-  padding: 14px 46px;
+  padding: 10px 46px;
   display: flex;
   justify-content: center;
   position: relative;
@@ -155,6 +173,6 @@
 }
 
 .upcoming-cruises__item:hover h3 {
-  top: 35px;
-  left: 25px;
+  top: 29px;
+  left: 35px;
 }
