--- a/source/sass/blocks/avantage.scss
+++ b/source/sass/blocks/avantage.scss
@@ -53,7 +53,7 @@
 .avantage ul {
   @include list-zeroing;
   display: flex;
-  align-items: flex-start;
+  align-items: stretch;
   flex-wrap: wrap;
   gap: 40px;
   margin-bottom: 0;
